syntax = "proto3";

package xyz.aspens.arborter_config.v1;

option optimize_for = SPEED;

// The Configuration service definition
service ConfigService {
  // rpc service to deploy a contract on the base and quote chains
  rpc DeployContract(DeployContractRequest) returns (DeployContractResponse) {}
  // rpc service to add a chain to the configuration
  rpc AddChain(AddChainRequest) returns (AddChainResponse) {}
  // rpc service to add a new token to trade
  rpc AddToken(AddTokenRequest) returns (AddTokenResponse) {}
  // rpc service to add a new market to trade
  rpc AddMarket(AddMarketRequest) returns (AddMarketResponse) {}
  // rpc service to add a new trade contract
  rpc AddTradeContract(AddTradeContractRequest) returns (AddTradeContractResponse) {}
  // rpc service to get the configuration
  rpc GetConfig(GetConfigRequest) returns (GetConfigResponse) {}
  // rpc service to get version information
  rpc GetVersion(Empty) returns (VersionInfo) {}
  // rpc service to delete a market
  rpc DeleteMarket(DeleteMarketRequest) returns (DeleteMarketResponse) {}
  // rpc service to delete a token
  rpc DeleteToken(DeleteTokenRequest) returns (DeleteTokenResponse) {}
  // rpc service to delete a chain
  rpc DeleteChain(DeleteChainRequest) returns (DeleteChainResponse) {}
  // rpc service to delete a trade contract
  rpc DeleteTradeContract(DeleteTradeContractRequest) returns (DeleteTradeContractResponse) {}
}

message DeployContractRequest {
  // The name of the chain to deploy the contract on. e.g. base-sepolia
  string chain_network = 1;
  // designate whether to deploy the contract on the base or quote chain
  string base_or_quote = 2;
}

message DeployContractResponse {
  // The address that the contract is deployed to on the base chain.
  string base_address = 1;
  // The address that the contract is deployed to on the quote chain.
  string quote_address = 2;
}

message AddChainRequest {
  // The chain to add
  Chain chain = 1;
}

message AddChainResponse {
  // Indicates if the chain was added successfully
  bool success = 1;
  // The configuration object
  Configuration config = 2;
}

message AddTokenRequest {
  // The name of the chain to add the token to. e.g. base-sepolia
  string chain_network = 1;
  // The token to ad
  Token token = 2;
}

message AddTokenResponse {
  // Indicates if the token was added successfully
  bool success = 1;
  // The configuration object
  Configuration config = 2;
}

message AddMarketRequest {
  // The base chain network
  string base_chain_network = 1;
  // The quote chain network
  string quote_chain_network = 2;
  // The base chain token symbol
  string base_chain_token_symbol = 3;
  // The quote chain token symbol
  string quote_chain_token_symbol = 4;
  // The base chain token address
  string base_chain_token_address = 5;
  // The quote chain token address
  string quote_chain_token_address = 6;
  // The base chain token decimals
  int32 base_chain_token_decimals = 7;
  // The quote chain token decimals
  int32 quote_chain_token_decimals = 8;
  // The pair decimals (this is chosen by the stack admin)
  int32 pair_decimals = 9;
}

message AddMarketResponse {
  // Indicates if the market was added successfully
  bool success = 1;
  // The configuration object
  Configuration config = 2;
}

message AddTradeContractRequest {
  // The chain address of the trade contract
  string address = 1;
  // The chain ID to associate the trade contract with
  int32 chain_id = 2;
}

message AddTradeContractResponse {
  // The created trade contract
  TradeContract trade_contract = 1;
}

// Request message for the service
message GetConfigRequest {
  // Add optional filters in the future (e.g., chain or market name)
}
message GetConfigResponse {
  // The configuration object
  Configuration config = 1;
}

// The top-level response containing chains and markets
message Configuration {
  // List of supported chains
  repeated Chain chains = 1;
  // List of supported markets
  repeated Market markets = 2;
}

// Represents the trade contract details
message TradeContract {
  // Optional: For non-EVM chains like Hedera, Solana, etc.
  optional string contract_id = 1;
  // The chain address of the trade contract
  string address = 2;
}

enum BaseOrQuote {
  BASE_OR_QUOTE_UNSPECIFIED = 0;
  BASE_OR_QUOTE_BASE = 1;
  BASE_OR_QUOTE_QUOTE = 2;
}

// Represents a single blockchain network
message Chain {
  // The architecture of the chain (e.g., EVM, Hedera)
  string architecture = 1;
  // The canonical name of the chain (e.g., 'Ethereum Mainnet' | 'Hedera Testnet')
  string canonical_name = 2;
  // The chain network (e.g., op-mainnet, hedera-testnet)
  string network = 3;
  // The chain ID (e.g., Ethereum = 1)
  int32 chain_id = 4;
  // Pubkey address of the owner of the deployed trade contract
  string contract_owner_address = 5;
  // Optional: URL to the chain explorer
  optional string explorer_url = 6;
  // The RPC URL for the chain
  string rpc_url = 7;
  // The address of the factory service contract on this chain. This is the address to call to deploy a new trade contract
  string service_address = 8;
  // The trade contract details
  TradeContract trade_contract = 9;
  // Mapping of token symbols to token details
  map<string, Token> tokens = 10;
  // Declare whether this chain should act as the base or quote side of the trading pairs
  BaseOrQuote base_or_quote = 11;
}

// Represents a market with a base- and quote- chain token pair
message Market {
  // The market slug, e.g. 'base-sepolia-usdc--op-sepolia-usdc'
  string slug = 1;
  // The market name, e.g. 'Base Sepolia USDC - OP Sepolia USDC'
  string name = 2;
  // The base chain, e.g. 'base-sepolia'
  string base_chain_network = 3;
  // The quote chain, e.g. 'op-sepolia'
  string quote_chain_network = 4;
  /// The token symbol for the base chain
  string base_chain_token_symbol = 5;
  /// The token symbol for the quote chain
  string quote_chain_token_symbol = 6;
  // The base chain token decimals
  int32 base_chain_token_decimals = 7;
  // The quote chain token decimals
  int32 quote_chain_token_decimals = 8;
  // The pair decimals (this is chosen by the stack admin)
  int32 pair_decimals = 9;
  // Identity the market: concat(base_chain_id "::" token_address "::" quote_chain_id "::" token_address)
  optional string market_id = 10;
}

// Represents a single token
message Token {
  // The name of the token
  string name = 1;
  // The symbol of the token
  string symbol = 2;
  // The chain address of the token contract
  string address = 3;
  // Optional: for networks that use IDs (e.g., Hedera)
  optional string token_id = 4;
  // The number of decimal places the token is defined with
  int32 decimals = 5;
  // The level of precision the token trades at
  int32 trade_precision = 6;
}

// Delete market request
message DeleteMarketRequest {
  // The market ID to delete
  string market_id = 1;
}

// Delete market response
message DeleteMarketResponse {
  // Indicates if the market was deleted successfully
  bool success = 1;
  // The configuration object after deletion
  Configuration config = 2;
}

// Delete token request
message DeleteTokenRequest {
  // The chain network where the token exists
  string chain_network = 1;
  // The token symbol to delete
  string token_symbol = 2;
}

// Delete token response
message DeleteTokenResponse {
  // Indicates if the token was deleted successfully
  bool success = 1;
  // The configuration object after deletion
  Configuration config = 2;
}

// Delete chain request
message DeleteChainRequest {
  // The chain network to delete
  string chain_network = 1;
}

// Delete chain response
message DeleteChainResponse {
  // Indicates if the chain was deleted successfully
  bool success = 1;
  // The configuration object after deletion
  Configuration config = 2;
}

// Delete trade contract request
message DeleteTradeContractRequest {
  // The chain ID to delete the trade contract from
  int32 chain_id = 1;
}

// Delete trade contract response
message DeleteTradeContractResponse {
  // Indicates if the trade contract was deleted successfully
  bool success = 1;
  // The configuration object after deletion
  Configuration config = 2;
}

message Empty {}

// Version information in vergen style
message VersionInfo {
  // The version of the application (e.g., "1.0.0")
  string version = 1;
  // The git commit hash
  string git_commit_hash = 2;
  // The git commit date
  string git_commit_date = 3;
  // The git branch name
  string git_branch = 4;
  // The build timestamp
  string build_timestamp = 5;
  // The target triple
  string target_triple = 6;
  // The rustc version used to build
  string rustc_version = 7;
  // The cargo features enabled
  repeated string cargo_features = 8;
}
